5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1752_1530.log
== SUBMITION (2019-05-16 16:18:05) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

anos = 0

while (lim <= 80000)
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos += +1
	lim = c1 + c2
print(anos)

-- EXECUTION TIME:
0.128471
-- ERROR:
  File "/home/codebench/codes/1752/1530/main.py", line 8
    while (lim <= 80000)
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:18:06) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

anos = 0

while (lim <= 80000)
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos += +1
	lim = c1 + c2
print(anos)

-- ERROR:
File "XXXX", line 8
    while (lim <= 80000)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:55) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

espaco = (qip*pap/100) + (qiv*pav/100)
anos = 0

while (espaco <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos += +1
print(anos)

-- ERROR:
File "XXXX", line 8
    while (lim <= 80000)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:28:20) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

espaco = (qip*pap/100) + (qiv*pav/100)
anos = 0

while (espaco <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
print(anos)
	anos += +1
-- ERROR:
File "XXXX", line 15
    anos += +1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:28:38) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

espaco = (qip*pap/100) + (qiv*pav/100)
anos = 0

while (espaco <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
print(anos)
	anos = anos + 1
-- ERROR:
File "XXXX", line 15
    anos = anos + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:29:17) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

espaco = (qip*pap/100) + (qiv*pav/100)
anos = 0

while (espaco <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos = anos + 1
print(anos)
-- ERROR:
File "XXXX", line 15
    anos = anos + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:32:08) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

espaco = (qip*pap/100) + (qiv*pav/100)
anos = 0

while (espaco <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos = anos + 1
	qip = int(input())
	qiv = int(input())
print(anos)
-- EXECUTION TIME:
0.238376
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1752/1530/main.py", line 15, in <module>
    qip = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:32:09) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

espaco = (qip*pap/100) + (qiv*pav/100)
anos = 0

while (espaco <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos = anos + 1
	qip = int(input())
	qiv = int(input())
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    qip = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:33:01) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

espaco = (qip*pap/100) + (qiv*pav/100)
anos = 0

while (espaco <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos += +1
print(anos)

-- EXECUTION TIME:
427.911
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:35:08) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

anos = 0

while (espaco <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos = anos + 1
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (espaco <= 80000):
NameError: name 'espaco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:40:04) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

lim = qiv + qip
anos = 0

while (lim <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos = anos + 1
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (espaco <= 80000):
NameError: name 'espaco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:48:54) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

lim = qiv + qip
anos = 0

while (lim <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos = anos + 1
print(anos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (espaco <= 80000):
NameError: name 'espaco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:00:08) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

lim = qiv + qip
anos = 0

while (lim <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos = anos + 1
print(anos)
-- EXECUTION TIME:
3833.18
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:00:08) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

lim = qiv + qip
anos = 0

while (lim <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos = anos + 1
print(anos)
-- EXECUTION TIME:
4274.53
-- TEST CASE 1:
---- input:
1500
1000
1.3
2.3
---- correct output:
183
---- user output:

-- TEST CASE 2:
---- input:
1200
100
2.3
25.3
---- correct output:
30
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
3200
120
25.6
25.6
---- correct output:
14
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:00:08) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

lim = qiv + qip
anos = 0

while (lim <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos = anos + 1
print(anos)
-- EXECUTION TIME:
4272.78
-- TEST CASE 1:
---- input:
1500
1000
1.3
2.3
---- correct output:
183
---- user output:

-- TEST CASE 2:
---- input:
1200
100
2.3
25.3
---- correct output:
30
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
3200
120
25.6
25.6
---- correct output:
14
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:00:08) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

lim = qiv + qip
anos = 0

while (lim <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos = anos + 1
print(anos)
-- EXECUTION TIME:
4274.39
-- TEST CASE 1:
---- input:
1500
1000
1.3
2.3
---- correct output:
183
---- user output:

-- TEST CASE 2:
---- input:
1200
100
2.3
25.3
---- correct output:
30
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
3200
120
25.6
25.6
---- correct output:
14
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:00:09) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

lim = qiv + qip
anos = 0

while (lim <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos = anos + 1
print(anos)
-- EXECUTION TIME:
3773.28
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:00:09) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

lim = qiv + qip
anos = 0

while (lim <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos = anos + 1
print(anos)
-- EXECUTION TIME:
4271.08
-- TEST CASE 1:
---- input:
1500
1000
1.3
2.3
---- correct output:
183
---- user output:

-- TEST CASE 2:
---- input:
1200
100
2.3
25.3
---- correct output:
30
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
3200
120
25.6
25.6
---- correct output:
14
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:00:09) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

lim = qiv + qip
anos = 0

while (lim <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos = anos + 1
print(anos)
-- EXECUTION TIME:
4273.17
-- TEST CASE 1:
---- input:
1500
1000
1.3
2.3
---- correct output:
183
---- user output:

-- TEST CASE 2:
---- input:
1200
100
2.3
25.3
---- correct output:
30
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
3200
120
25.6
25.6
---- correct output:
14
---- user output:
task 65042993d2b9cf976b1e92535348388e87ef4309e852de14a50c30e3b3f429ef not found: not found
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:00:09) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

lim = qiv + qip
anos = 0

while (lim <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos = anos + 1
print(anos)
-- EXECUTION TIME:
3774.69
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:00:09) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

lim = qiv + qip
anos = 0

while (lim <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos = anos + 1
print(anos)
-- EXECUTION TIME:
4272.85
-- TEST CASE 1:
---- input:
1500
1000
1.3
2.3
---- correct output:
183
---- user output:

-- TEST CASE 2:
---- input:
1200
100
2.3
25.3
---- correct output:
30
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
3200
120
25.6
25.6
---- correct output:
14
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:00:09) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

lim = qiv + qip
anos = 0

while (lim <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos = anos + 1
print(anos)
-- EXECUTION TIME:
3777.2
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:00:09) 
-- CODE:
qip = int(input())
qiv = int(input())
pap = float(input())
pav = float(input())

lim = qiv + qip
anos = 0

while (lim <= 80000):
	c1 = qip*pap/100
	qip = qip + c1
	c2 = qiv*pav/100
	qiv = qiv + c2
	anos = anos + 1
print(anos)
-- EXECUTION TIME:
3833.65
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
